--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "istanbul": "^0.4.5",
     "react": "^18.2.0",
